posiGen_FullsendBox/src/objects/Box_Log__c.object
<CustomObject>
    <fields>
        <fullName>Collaboration_Role__c</fullName>
        <label>Collaboration Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Box Logs</relationshipLabel>
        <relationshipName>Box_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Box Logs</relationshipLabel>
        <relationshipName>Box_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Random_Number__c</fullName>
        <label>Random Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Folder</label>
        <referenceTo>Sub_Folder__c</referenceTo>
        <relationshipLabel>Box Logs</relationshipLabel>
        <relationshipName>Box_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Box Log</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Box Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Box Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>